--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,28 @@
             <div id="command-results"></div>
         </div>
     </div>
+    
+    <!-- Natural Language Clarification Modal -->
+    <div id="nl-modal" class="nl-hidden" aria-hidden="true">
+        <div class="nl-overlay"></div>
+        <div class="nl-card" role="dialog" aria-modal="true" aria-labelledby="nl-title">
+            <div class="nl-header">
+                <div>
+                    <div id="nl-title" class="nl-title">Clarify Query</div>
+                    <div id="nl-template" class="nl-subtitle"></div>
+                </div>
+            </div>
+            <div class="nl-body">
+                <div class="nl-query" id="nl-query"></div>
+                <div id="nl-fields" class="nl-fields"></div>
+                <div id="nl-message" class="nl-message"></div>
+            </div>
+            <div class="nl-footer">
+                <button id="nl-cancel" class="nl-btn nl-secondary">Cancel</button>
+                <button id="nl-run" class="nl-btn nl-primary">Run Scan</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Main Layout -->
     <div id="app">
